# kfftapp

./: .clang-format  .gitignore  cmdline.c  complex.c  const.h  getopt_win.h  info.c  kfa_defs.h  kfft_main.c  loader.c  make_debug  make_release  make_release_wdi  meson.build  scalar.c
libs/: kfft  kfft.wrap
